hphp/hack/test/typecheck/reactive/parse_missing_reactivity5.php.exp
File "parse_missing_reactivity5.php", line 3, characters 1-19:
__OnlyRxIfImpl and __AtMostRxAsArgs annotations cannot be used without __Rx, __RxShallow, or __RxLocal. (Parsing[1002])
