hphp/hack/test/typecheck/reactive/parse_missing_reactivity5.php
<?hh // strict

<<__OnlyRxIfArgs>>
function f(): void {}
